@@ -56,6 +56,7 @@ struct c3x_config {
 	char group_units_on_right_click_menu;
 	int anarchy_length_reduction_percent;
 	char show_golden_age_turns_remaining;
+	char show_zoc_attacks_from_mid_stack;
 	char cut_research_spending_to_avoid_bankruptcy;
 	char dont_pause_for_love_the_king_messages;
 	char reverse_specialist_order_with_shift;
