@@ -12,6 +12,7 @@ skip_repeated_tile_improv_replacement_asks = true
 group_units_on_right_click_menu = true
 show_detailed_tile_info = true
 show_golden_age_turns_remaining = true
+show_zoc_attacks_from_mid_stack = true
 cut_research_spending_to_avoid_bankruptcy = true
 dont_pause_for_love_the_king_messages = true
 
