@@ -1,3 +1,6 @@
+- Zone of control changes
+  - Allow land-to-sea and sea-to-land attacks, only using bombard stat
+  - Make sure attacking unit is visible so animations play
 - Can use charm flag to control PTW-like artillery targeting
 - Option to ignore king flag on defense, so kings aren't always last to defend in a stack
 - Harbor/airport city icons indicate unit effects not trade abilities
